@@ -5,6 +5,8 @@
 
 ------------------------------------------------------------------------------
 
+Interchange-4.9.6 -- not yet released
+
 Interchange-4.9.5 -- minor bugfix release
 
 Foundation
